<resources>
    <string name="app_name">TS8209A</string>


    <string name="welcome_title">欢迎您</string>
    <string name="meeting_info">会议信息</string>
    <string name="call_services">呼叫服务</string>
    <string name="sms_func">短信功能</string>
    <string name="edit_user_info">编辑用户信息</string>
    <string name="sys_setting">系统设置</string>
    <string name="coffee">咖啡</string>
    <string name="tea">茶</string>
    <string name="water">水</string>
    <string name="microphone">话筒</string>
    <string name="flower">花</string>
    <string name="pen">笔</string>
    <string name="paper">纸</string>
    <string name="artificial_services">人工服务</string>
    <string name="user_name">用户名称</string>
    <string name="comp_name">公司名称</string>
    <string name="user_pos">用户职位</string>
    <string name="click_to_preview_nameplate">点击下方预览铭牌布局</string>
    <string name="long_click_to_switch_nameplate">长按下方切换铭牌属性</string>
    <string name="font_style">字体</string>
    <string name="font_size">字号</string>
    <string name="font_color">颜色</string>
    <string name="select_bg_color">选择背景颜色</string>
    <string name="save">保存</string>
    <string name="ip_address">IP地址</string>
    <string name="network_config">网络配置</string>
    <string name="backlight">亮度</string>
    <string name="wifi_config">wifi配置</string>
    <string name="app_config">应用配置</string>
    <string name="dev_id">终端ID:</string>
    <string name="server_ip">服务器IP:</string>
    <string name="server_port">服务器端口:</string>
    <string name="automatic_ip">自动分配IP:</string>

    <string name="net_type">网络类型:</string>
    <string name="local_ip">本地IP:</string>
    <string name="gateway">网关:</string>
    <string name="netmask">掩码:</string>
    <string name="wifi_ssid">网络名称:</string>
    <string name="signal">信号:</string>
    <string name="mac">MAC:</string>
    <string name="server_ip_config">服务器IP配置</string>
    <string name="local_ip_config">本机IP配置</string>
    <string name="wireless_network">无线网络</string>
    <string name="wire_network">有线网络</string>
    <string name="can_not_be_empty">不能为空</string>
    
    <string name="use_server_ready_made_nameplate">使用系统预设铭牌</string>
    <string name="use_custom_nameplate">使用自定义铭牌</string>
    <string name="set_background">设置背景</string>
    <string name="select_nameplate">选择铭牌</string>
    <string name="file_name">文件名</string>


    <string name="dhcp">DHCP:</string>
    <string name="screen_backlight">屏幕亮度</string>
    <string name="wifi_switch">WIFI开关</string>
    <string name="wifi_select">选择WIFI</string>
    <string name="wifi_status">Wifi状态</string>
    <string name="disconnect_wifi">断开无线网络</string>
    <string name="sys_version">系统版本</string>
    <string name="app_version">软件版本</string>
    <string name="sys_language">系统语言</string>
    <string name="lang_cn_en">简体中文</string>
    <string name="to_engineer_mode">切换到工程模式</string>
    <string name="app_updata">软件升级</string>

    <string name="addressee">收件人：</string>
    <string name="sms_content">内   容：</string>
    <string name="please_input_sms_content">请输入短信内容</string>
    <string name="choice">选 择</string>
    <string name="send">发 送</string>
    <string name="sms_record">消息记录</string>
    <string name="edit_the_message">编辑消息</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="please_select_the_addressee">请选择收件人</string>
    <string name="text_messaging_cannot_be_empty">短信发送内容不能为空</string>
    <string name="text_messaging_success">短信发送成功</string>
    <string name="server_dose_not_connect">未连接服务器</string>
    <string name="select_all">全选</string>
    <string name="info_abstract">摘要:</string>
    <string name="click_for_details">点击查看详情</string>

    <string name="color">颜色</string>
    <string name="choice_bg_color">选择背景色</string>
    <string name="save_successfully">保存成功</string>
    <string name="nameplate_preview">电子铭牌布局预览</string>
    <string name="nameplate_confirm">确认并更新电子铭牌</string>
    <string name="close_preview">关闭预览页面</string>
    <string name="nameplate_is_updating">电子铭牌正在更新</string>
    <string name="color_picker_title">点击色环选择颜色;下方选择色调;点击中心确定选择</string>
    <string name="set_font_size">字体大小设置</string>
    <string name="show_nameplate">显示铭牌</string>
    <string name="admin_password">管理员密码</string>
    <string name="delete">删 除</string>

    <string name="server_para">服务器参数</string>
    <string name="dim_screen_time">屏幕休眠时间</string>
    <string name="second">秒钟</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="never">永不</string>


</resources>
